Added list of things I carry

--- a/index.html
+++ b/index.html
@@ -20,20 +20,49 @@
 </head>
 
 <!-- color palettes; colorhunt.co
-#232931
-#393e46
-#4ecca3
-#eeeeee
+
 -->
 
 <body>
 <div class="container-fluid">
     <div class="image">
         <div class="content">
-            <h1>What is Lorem Ipsum?</h1>
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has
-            survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing
-            software like Aldus PageMaker including versions of Lorem Ipsum.
+            <h5 class="card-title">
+
+                Alcohol Pads<br/>
+                Antibiotic Ointment<br/>
+                Benadryl<br/>
+                CPR Face Shield<br/>
+                Charging Brick<br/>
+                Charging Wires<br/>
+                Claritin<br/>
+                Duct tape<br/>
+                Floss<br/>
+                Gas-X pills<br/>
+                Gauze – 1 Roll<br/>
+                Hair Ties<br/>
+                Hydrocortisone Cream<br/>
+                Knuckle/Fingertip Band-aids<br/>
+                Lactaid<br/>
+                Latex Gloves<br/>
+                Leatherman Wingman Multitool<br/>
+                Lip Balm<br/>
+                Menthol Cough Drops<br/>
+                Nail Clipper w/ File<br/>
+                Pads – Green<br/>
+                Pain/Itch Neosporin<br/>
+                Pen/Pencil<br/>
+                Pimple Patches<br/>
+                Powerbank<br/>
+                Q-tips<br/>
+                Scotch Tape<br/>
+                Standard Band-aids<br/>
+                Tide Pen<br/>
+                Tums<br/>
+                Tylenol – 500mg pills<br/>
+                Yeehaw Frog Sticker – 1<br/>
+            </h5>
+
         </div>
     </div>
 </div>
