--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <title> Ryan Chang </title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" href="images/favicon2.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
 
 
 </head>
@@ -24,45 +27,50 @@
 -->
 
 <body>
+
 <div class="container-fluid">
-    <div class="image">
-        <div class="content">
-            <h5 class="card-title">
+    <div class="image col-12 col-lg-4 mx-auto">
+        <div class = "card text-center">
+            <h4 class="card-header ">My Everyday Carry <img src="/images/bestHat.png" id="slidecaption"></h4>
+        </div>
 
-                Alcohol Pads<br/>
-                Antibiotic Ointment<br/>
-                Benadryl<br/>
-                CPR Face Shield<br/>
-                Charging Brick<br/>
-                Charging Wires<br/>
-                Claritin<br/>
-                Duct tape<br/>
-                Floss<br/>
-                Gas-X pills<br/>
-                Gauze – 1 Roll<br/>
-                Hair Ties<br/>
-                Hydrocortisone Cream<br/>
-                Knuckle/Fingertip Band-aids<br/>
-                Lactaid<br/>
-                Latex Gloves<br/>
-                Leatherman Wingman Multitool<br/>
-                Lip Balm<br/>
-                Menthol Cough Drops<br/>
-                Nail Clipper w/ File<br/>
-                Pads – Green<br/>
-                Pain/Itch Neosporin<br/>
-                Pen/Pencil<br/>
-                Pimple Patches<br/>
-                Powerbank<br/>
-                Q-tips<br/>
-                Scotch Tape<br/>
-                Standard Band-aids<br/>
-                Tide Pen<br/>
-                Tums<br/>
-                Tylenol – 500mg pills<br/>
-                Yeehaw Frog Sticker – 1<br/>
-            </h5>
+        <ul class="list-group py-2">
+            <li class="list-group-item">Alcohol Pads</li>
+            <li class="list-group-item">Antibiotic Ointment</li>
+            <li class="list-group-item">Bandaids</li>
+            <li class="list-group-item">Bandaids - Knuckle/Fingertip</li>
+            <li class="list-group-item">Benadryl</li>
+            <li class="list-group-item">CPR Face Shield</li>
+            <li class="list-group-item">Charging Brick</li>
+            <li class="list-group-item">Charging Wires</li>
+            <li class="list-group-item">Claritin</li>
+            <li class="list-group-item">Duct tape</li>
+            <li class="list-group-item">Floss</li>
+            <li class="list-group-item">Gas-X pills</li>
+            <li class="list-group-item">Gauze – 1 Roll</li>
+            <li class="list-group-item">Hair Ties</li>
+            <li class="list-group-item">Hydrocortisone Cream</li>
+            <li class="list-group-item">Lactaid</li>
+            <li class="list-group-item">Latex Gloves</li>
+            <li class="list-group-item">Leatherman Wingman Multitool</li>
+            <li class="list-group-item">Lip Balm</li>
+            <li class="list-group-item">Menthol Cough Drops</li>
+            <li class="list-group-item">Nail Clipper w/ File</li>
+            <li class="list-group-item">Pads – Green</li>
+            <li class="list-group-item">Pain/Itch Neosporin</li>
+            <li class="list-group-item">Pens/Pencil</li>
+            <li class="list-group-item">Pimple Patches</li>
+            <li class="list-group-item">Powerbank</li>
+            <li class="list-group-item">Q-tips</li>
+            <li class="list-group-item">Scotch Tape</li>
+            <li class="list-group-item">Tide Pen</li>
+            <li class="list-group-item">Tums</li>
+            <li class="list-group-item">Tylenol – 500mg pills</li>
+            <li class="list-group-item">Yeehaw Frog Sticker – 1</li>
+        </ul>
 
+        <div class = "card text-center">
+            <h6 class="card-header">Add me on LinkedIn -> <a href = "https://www.linkedin.com/in/ryan-m-chang/"><i class="fab fa-linkedin"></i></a></h6>
         </div>
     </div>
 </div>
