--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <div class="container-fluid">
     <div class="image col-12 col-lg-4 mx-auto">
         <div class = "card text-center">
-            <h4 class="card-header ">My Everyday Carry <img src="/images/bestHat.png" id="slidecaption"></h4>
+            <h4 class="card-header ">My Everyday Carry <img src="images/bestHat.png" id="slidecaption"></h4>
         </div>
 
         <ul class="list-group py-2">
