--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <li class="list-group-item">Tide Pen</li>
             <li class="list-group-item">Tums</li>
             <li class="list-group-item">Tylenol – 500mg pills</li>
-            <li class="list-group-item">Yeehaw Frog Sticker – 1 <img src="images/yeehawFrog.jpg" class="list-image"></li>
+            <li class="list-group-item yeeHawListGroup">Yeehaw Frog Sticker – 1 <img src="images/yeehawFrog.jpg" class="list-image"></li>
         </ul>
 
         <div class = "card text-center">
@@ -74,7 +74,7 @@
         </div>
 
         <script>
-          document.querySelectorAll('.list-group-item').forEach(item => {
+          document.querySelectorAll('.yeeHawListGroup').forEach(item => {
             item.addEventListener('click', () => {
               const img = item.querySelector('.list-image');
               img.style.display = img.style.display === 'none' || img.style.display === ''
